// Vitest Snapshot v1

exports[`<SubtractionFileItem /> > should render when [active=%p] false 1`] = `
<Styled(Styled(styled.div))
  active={false}
  onClick={[Function]}
>
  <strong>
    test
  </strong>
  <Styled(UnstyledAttribution)
    time="2018-02-14T17:12:00.000000Z"
    user="test-user"
  />
</Styled(Styled(styled.div))>
`;

exports[`<SubtractionFileItem /> > should render when [active=%p] true 1`] = `
<Styled(Styled(styled.div))
  active={true}
  onClick={[Function]}
>
  <strong>
    test
  </strong>
  <Styled(UnstyledAttribution)
    time="2018-02-14T17:12:00.000000Z"
    user="test-user"
  />
</Styled(Styled(styled.div))>
`;
